# OpenCV_BIM_Ros2_Integration

./: .gitattributes  README.md  package.xml  setup.py
config/: params.yaml
desktop_icons/: Close.desktop  Robot.desktop
from_bim/: TransformData.dyn
launch/: myrobot_launch.py
launch_script/: destroy.sh  pkg_launch.sh
ros2_aruco/: aruco_node2.py  marker.py  orientation.py  panel.py  panel1.txt  robot.py
ros2_aruco/markers/: tag_definitions.py
rviz/: config.rviz
urdf_model/: model.urdf
urdf_model/Meshes/: 3d_mesh.dae  Arm.dae  H_Motor.dae  Head.dae  R_Motor.dae  Translation.dae  V_Motor.dae  panel.dae
