<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_aruco</name>
  <version>0.1.0</version>
  <description>ROS2 Aruco Marker Tracking</description>
  <maintainer email="yasmin@todo.todo">yasmin</maintainer>
  <license>TODO: License declaration</license>

  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-opencv</depend>

  <exec_depend>tf2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>python3-opencv</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
